--- a/MVVMaApp/MVVMApp/Base.lproj/Main.storyboard
+++ b/MVVMaApp/MVVMApp/Base.lproj/Main.storyboard
@@ -83,10 +83,41 @@
                     <view key="view" contentMode="scaleToFill" id="gVt-8W-54m">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8CT-8I-VVd">
+                                <rect key="frame" x="40" y="93" width="100" height="32"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S8h-A1-6nf">
+                                <rect key="frame" x="20" y="155" width="374" height="628"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="W3u-Jm-MpP">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Z7B-sU-yii"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8CT-8I-VVd" firstAttribute="top" secondItem="Z7B-sU-yii" secondAttribute="top" constant="49" id="7Fy-m8-yNk"/>
+                            <constraint firstItem="S8h-A1-6nf" firstAttribute="top" secondItem="8CT-8I-VVd" secondAttribute="bottom" constant="30" id="MSr-BQ-7qy"/>
+                            <constraint firstItem="8CT-8I-VVd" firstAttribute="leading" secondItem="Z7B-sU-yii" secondAttribute="leading" constant="40" id="rmh-sl-f6N"/>
+                            <constraint firstItem="Z7B-sU-yii" firstAttribute="bottom" secondItem="S8h-A1-6nf" secondAttribute="bottom" constant="30" id="stx-Wj-13B"/>
+                            <constraint firstItem="Z7B-sU-yii" firstAttribute="trailing" secondItem="S8h-A1-6nf" secondAttribute="trailing" constant="20" id="uPP-dF-wUp"/>
+                            <constraint firstItem="S8h-A1-6nf" firstAttribute="leading" secondItem="Z7B-sU-yii" secondAttribute="leading" constant="20" id="wBv-km-D7W"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="favorites" id="aoT-KX-mZG"/>
+                    <connections>
+                        <outlet property="featuredCollectionView" destination="S8h-A1-6nf" id="PJQ-Xh-VQo"/>
+                        <outlet property="featuredTitleLabel" destination="8CT-8I-VVd" id="bgq-oU-vOc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aDr-nu-4GC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
